test/mutation_analysis/s0357_count_numbers_with_unique_digits/hafis/ablation_o3_r50/mutants/5/result.txt
./test/mutation_analysis/s0357_count_numbers_with_unique_digits/hafis/ablation_o3_r50/mutants/5/Solution.java:17: error: unreachable statement
            for (int j = 1; false; j++) {
                                        ^
1 error
